--- a/blog-web/src/main/resources/templates/blog/amaze/footer.html
+++ b/blog-web/src/main/resources/templates/blog/amaze/footer.html
@@ -40,7 +40,7 @@
          style="display: none; margin-top: -159px;color: black">
         <div class="am-modal-dialog">
             <div class="am-modal-hd"><a href="" class="am-close am-close-spin" data-am-modal-close="">×</a></div>
-            <div class="am-modal-bd"><img th:src="@{/blog/amaze/images/wx35673847.png}" alt="作者微信" style="width: 50%">
+            <div class="am-modal-bd"><img th:src="@{/admin/dist/img/weixin.png}" alt="作者微信" style="width: 50%">
                 <br>有问题加我微信，不要闲聊！
             </div>
         </div>
