--- a/blog-web/src/main/resources/templates/blog/amaze/header.html
+++ b/blog-web/src/main/resources/templates/blog/amaze/header.html
@@ -65,7 +65,7 @@
                 </li>
                 <li>
                     <a th:href="@{/link}">
-                        友链
+                        添加微信
                     </a>
                 </li>
             </ul>
