--- a/blog-web/src/main/resources/templates/blog/amaze/side.html
+++ b/blog-web/src/main/resources/templates/blog/amaze/side.html
@@ -5,7 +5,7 @@
         <section>
             <div class="sidebar-header">
                 <span class="sidebar-header-title">
-                    搜索文章
+                    搜索项目
                 </span>
             </div>
             <div class="sidebar-search">
